a-lison/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    REPORT

Grammar

Rule 0     S' -> program
Rule 1     program -> r1 STARTPROG vars r4 routines main ENDPROG
Rule 2     r1 -> <empty>
Rule 3     r4 -> <empty>
Rule 4     vars -> VARS decvars ENDVARS
Rule 5     decvars -> type r2 dim1array decassign SEMICOLON r3 decvars
Rule 6     decvars -> empty
Rule 7     r2 -> ID
Rule 8     r3 -> <empty>
Rule 9     dim1array -> L_BRKT V_INT R_BRKT dim2array
Rule 10    dim1array -> empty
Rule 11    dim2array -> L_BRKT V_INT R_BRKT
Rule 12    dim2array -> empty
Rule 13    decassign -> ASSIGN assignvalue
Rule 14    decassign -> empty
Rule 15    assignvalue -> constant
Rule 16    assignvalue -> assignarray
Rule 17    assignvalue -> empty
Rule 18    assignarray -> L_BRKT assignarray2 R_BRKT
Rule 19    assignarray -> empty
Rule 20    assignarray2 -> assignarray3
Rule 21    assignarray2 -> assignarray5
Rule 22    assignarray3 -> constant assignarray4
Rule 23    assignarray3 -> empty
Rule 24    assignarray4 -> COMMA assignarray3
Rule 25    assignarray4 -> empty
Rule 26    assignarray5 -> L_BRKT assignarray6 R_BRKT assignarray8
Rule 27    assignarray6 -> assignarray7
Rule 28    assignarray6 -> empty
Rule 29    assignarray7 -> COMMA assignarray6
Rule 30    assignarray7 -> empty
Rule 31    assignarray8 -> COMMA assignarray5
Rule 32    assignarray8 -> empty
Rule 33    routines -> decroutine routines
Rule 34    routines -> empty
Rule 35    decroutine -> ROUTINE dectype ID L_PAREN params R_PAREN L_CURLY vars block R_CURLY
Rule 36    routinecall -> ID L_PAREN paramcall R_PAREN
Rule 37    paramcall -> expression paramcall2
Rule 38    paramcall -> empty
Rule 39    paramcall2 -> COMMA paramcall
Rule 40    paramcall2 -> empty
Rule 41    dectype -> type
Rule 42    dectype -> empty
Rule 43    params -> type ID params2
Rule 44    params -> empty
Rule 45    params2 -> COMMA type ID params2
Rule 46    params2 -> empty
Rule 47    main -> MAIN L_CURLY vars block R_CURLY
Rule 48    constant -> V_INT
Rule 49    constant -> V_DOUBLE
Rule 50    constant -> V_CHAR
Rule 51    constant -> V_BOOL
Rule 52    decid -> ID decid2
Rule 53    decid2 -> L_BRKT expression R_BRKT decid3
Rule 54    decid2 -> empty
Rule 55    decid3 -> L_BRKT expression R_BRKT
Rule 56    decid3 -> empty
Rule 57    type -> INT
Rule 58    type -> DOUBLE
Rule 59    type -> CHAR
Rule 60    type -> BOOL
Rule 61    type -> STRING
Rule 62    block -> loop
Rule 63    block -> condition
Rule 64    block -> assignvalue SEMICOLON
Rule 65    block -> input SEMICOLON
Rule 66    block -> output SEMICOLON
Rule 67    block -> return SEMICOLON
Rule 68    block -> empty
Rule 69    loop -> LOOP L_PAREN expression R_PAREN
Rule 70    condition -> IF L_PAREN expression R_PAREN L_CURLY block R_CURLY else
Rule 71    else -> ELSE L_CURLY block R_CURLY
Rule 72    else -> empty
Rule 73    input -> INPUT L_PAREN expression R_PAREN
Rule 74    output -> OUTPUT L_PAREN expression R_PAREN
Rule 75    return -> RETURN expression
Rule 76    expression -> relational addlogic
Rule 77    addlogic -> AND expression
Rule 78    addlogic -> OR expression
Rule 79    addlogic -> empty
Rule 80    relational -> mathsum addrelational
Rule 81    addrelational -> GREATER
Rule 82    addrelational -> LESS
Rule 83    addrelational -> EQUAL
Rule 84    addrelational -> GREATEREQUAL
Rule 85    addrelational -> LESSEQUAL
Rule 86    addrelational -> NOTEQUAL
Rule 87    addrelational -> empty
Rule 88    mathsum -> mathmult addmathsum
Rule 89    addmathsum -> PLUS
Rule 90    addmathsum -> MINUS
Rule 91    addmathsum -> empty
Rule 92    mathmult -> prefactor addmathmult
Rule 93    addmathmult -> MULT
Rule 94    addmathmult -> DIV
Rule 95    addmathmult -> empty
Rule 96    prefactor -> negativefactor factor
Rule 97    negativefactor -> NOT
Rule 98    negativefactor -> empty
Rule 99    factor -> decid
Rule 100   factor -> constant
Rule 101   factor -> L_PAREN expression R_PAREN
Rule 102   factor -> routinecall
Rule 103   empty -> <empty>

Terminals, with rules where they appear

AND                  : 77
ASSIGN               : 13
BOOL                 : 60
CHAR                 : 59
COMMA                : 24 29 31 39 45
DIV                  : 94
DOUBLE               : 58
ELSE                 : 71
ENDPROG              : 1
ENDVARS              : 4
EQUAL                : 83
GREATER              : 81
GREATEREQUAL         : 84
ID                   : 7 35 36 43 45 52
IF                   : 70
INPUT                : 73
INT                  : 57
LESS                 : 82
LESSEQUAL            : 85
LOOP                 : 69
L_BRKT               : 9 11 18 26 53 55
L_CURLY              : 35 47 70 71
L_PAREN              : 35 36 69 70 73 74 101
MAIN                 : 47
MINUS                : 90
MULT                 : 93
NOT                  : 97
NOTEQUAL             : 86
OR                   : 78
OUTPUT               : 74
PLUS                 : 89
REPORT               : 
RETURN               : 75
ROUTINE              : 35
R_BRKT               : 9 11 18 26 53 55
R_CURLY              : 35 47 70 71
R_PAREN              : 35 36 69 70 73 74 101
SEMICOLON            : 5 64 65 66 67
STARTPROG            : 1
STRING               : 61
VARS                 : 4
V_BOOL               : 51
V_CHAR               : 50
V_DOUBLE             : 49
V_INT                : 9 11 48
error                : 

Nonterminals, with rules where they appear

addlogic             : 76
addmathmult          : 92
addmathsum           : 88
addrelational        : 80
assignarray          : 16
assignarray2         : 18
assignarray3         : 20 24
assignarray4         : 22
assignarray5         : 21 31
assignarray6         : 26 29
assignarray7         : 27
assignarray8         : 26
assignvalue          : 13 64
block                : 35 47 70 71
condition            : 63
constant             : 15 22 100
decassign            : 5
decid                : 99
decid2               : 52
decid3               : 53
decroutine           : 33
dectype              : 35
decvars              : 4 5
dim1array            : 5
dim2array            : 9
else                 : 70
empty                : 6 10 12 14 17 19 23 25 28 30 32 34 38 40 42 44 46 54 56 68 72 79 87 91 95 98
expression           : 37 53 55 69 70 73 74 75 77 78 101
factor               : 96
input                : 65
loop                 : 62
main                 : 1
mathmult             : 88
mathsum              : 80
negativefactor       : 96
output               : 66
paramcall            : 36 39
paramcall2           : 37
params               : 35
params2              : 43 45
prefactor            : 92
program              : 0
r1                   : 1
r2                   : 5
r3                   : 5
r4                   : 1
relational           : 76
return               : 67
routinecall          : 102
routines             : 1 33
type                 : 5 41 43 45
vars                 : 1 35 47

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . r1 STARTPROG vars r4 routines main ENDPROG
    (2) r1 -> .

    STARTPROG       reduce using rule 2 (r1 -> .)

    program                        shift and go to state 1
    r1                             shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> r1 . STARTPROG vars r4 routines main ENDPROG

    STARTPROG       shift and go to state 3


state 3

    (1) program -> r1 STARTPROG . vars r4 routines main ENDPROG
    (4) vars -> . VARS decvars ENDVARS

    VARS            shift and go to state 5

    vars                           shift and go to state 4

state 4

    (1) program -> r1 STARTPROG vars . r4 routines main ENDPROG
    (3) r4 -> .

    ROUTINE         reduce using rule 3 (r4 -> .)
    MAIN            reduce using rule 3 (r4 -> .)

    r4                             shift and go to state 6

state 5

    (4) vars -> VARS . decvars ENDVARS
    (5) decvars -> . type r2 dim1array decassign SEMICOLON r3 decvars
    (6) decvars -> . empty
    (57) type -> . INT
    (58) type -> . DOUBLE
    (59) type -> . CHAR
    (60) type -> . BOOL
    (61) type -> . STRING
    (103) empty -> .

    INT             shift and go to state 10
    DOUBLE          shift and go to state 11
    CHAR            shift and go to state 12
    BOOL            shift and go to state 13
    STRING          shift and go to state 14
    ENDVARS         reduce using rule 103 (empty -> .)

    decvars                        shift and go to state 7
    type                           shift and go to state 8
    empty                          shift and go to state 9

state 6

    (1) program -> r1 STARTPROG vars r4 . routines main ENDPROG
    (33) routines -> . decroutine routines
    (34) routines -> . empty
    (35) decroutine -> . ROUTINE dectype ID L_PAREN params R_PAREN L_CURLY vars block R_CURLY
    (103) empty -> .

    ROUTINE         shift and go to state 18
    MAIN            reduce using rule 103 (empty -> .)

    routines                       shift and go to state 15
    decroutine                     shift and go to state 16
    empty                          shift and go to state 17

state 7

    (4) vars -> VARS decvars . ENDVARS

    ENDVARS         shift and go to state 19


state 8

    (5) decvars -> type . r2 dim1array decassign SEMICOLON r3 decvars
    (7) r2 -> . ID

    ID              shift and go to state 21

    r2                             shift and go to state 20

state 9

    (6) decvars -> empty .

    ENDVARS         reduce using rule 6 (decvars -> empty .)


state 10

    (57) type -> INT .

    ID              reduce using rule 57 (type -> INT .)


state 11

    (58) type -> DOUBLE .

    ID              reduce using rule 58 (type -> DOUBLE .)


state 12

    (59) type -> CHAR .

    ID              reduce using rule 59 (type -> CHAR .)


state 13

    (60) type -> BOOL .

    ID              reduce using rule 60 (type -> BOOL .)


state 14

    (61) type -> STRING .

    ID              reduce using rule 61 (type -> STRING .)


state 15

    (1) program -> r1 STARTPROG vars r4 routines . main ENDPROG
    (47) main -> . MAIN L_CURLY vars block R_CURLY

    MAIN            shift and go to state 23

    main                           shift and go to state 22

state 16

    (33) routines -> decroutine . routines
    (33) routines -> . decroutine routines
    (34) routines -> . empty
    (35) decroutine -> . ROUTINE dectype ID L_PAREN params R_PAREN L_CURLY vars block R_CURLY
    (103) empty -> .

    ROUTINE         shift and go to state 18
    MAIN            reduce using rule 103 (empty -> .)

    decroutine                     shift and go to state 16
    routines                       shift and go to state 24
    empty                          shift and go to state 17

state 17

    (34) routines -> empty .

    MAIN            reduce using rule 34 (routines -> empty .)


state 18

    (35) decroutine -> ROUTINE . dectype ID L_PAREN params R_PAREN L_CURLY vars block R_CURLY
    (41) dectype -> . type
    (42) dectype -> . empty
    (57) type -> . INT
    (58) type -> . DOUBLE
    (59) type -> . CHAR
    (60) type -> . BOOL
    (61) type -> . STRING
    (103) empty -> .

    INT             shift and go to state 10
    DOUBLE          shift and go to state 11
    CHAR            shift and go to state 12
    BOOL            shift and go to state 13
    STRING          shift and go to state 14
    ID              reduce using rule 103 (empty -> .)

    dectype                        shift and go to state 25
    type                           shift and go to state 26
    empty                          shift and go to state 27

state 19

    (4) vars -> VARS decvars ENDVARS .

    ROUTINE         reduce using rule 4 (vars -> VARS decvars ENDVARS .)
    MAIN            reduce using rule 4 (vars -> VARS decvars ENDVARS .)
    LOOP            reduce using rule 4 (vars -> VARS decvars ENDVARS .)
    IF              reduce using rule 4 (vars -> VARS decvars ENDVARS .)
    INPUT           reduce using rule 4 (vars -> VARS decvars ENDVARS .)
    OUTPUT          reduce using rule 4 (vars -> VARS decvars ENDVARS .)
    RETURN          reduce using rule 4 (vars -> VARS decvars ENDVARS .)
    V_INT           reduce using rule 4 (vars -> VARS decvars ENDVARS .)
    V_DOUBLE        reduce using rule 4 (vars -> VARS decvars ENDVARS .)
    V_CHAR          reduce using rule 4 (vars -> VARS decvars ENDVARS .)
    V_BOOL          reduce using rule 4 (vars -> VARS decvars ENDVARS .)
    L_BRKT          reduce using rule 4 (vars -> VARS decvars ENDVARS .)
    R_CURLY         reduce using rule 4 (vars -> VARS decvars ENDVARS .)
    SEMICOLON       reduce using rule 4 (vars -> VARS decvars ENDVARS .)


state 20

    (5) decvars -> type r2 . dim1array decassign SEMICOLON r3 decvars
    (9) dim1array -> . L_BRKT V_INT R_BRKT dim2array
    (10) dim1array -> . empty
    (103) empty -> .

    L_BRKT          shift and go to state 29
    ASSIGN          reduce using rule 103 (empty -> .)
    SEMICOLON       reduce using rule 103 (empty -> .)

    dim1array                      shift and go to state 28
    empty                          shift and go to state 30

state 21

    (7) r2 -> ID .

    L_BRKT          reduce using rule 7 (r2 -> ID .)
    ASSIGN          reduce using rule 7 (r2 -> ID .)
    SEMICOLON       reduce using rule 7 (r2 -> ID .)


state 22

    (1) program -> r1 STARTPROG vars r4 routines main . ENDPROG

    ENDPROG         shift and go to state 31


state 23

    (47) main -> MAIN . L_CURLY vars block R_CURLY

    L_CURLY         shift and go to state 32


state 24

    (33) routines -> decroutine routines .

    MAIN            reduce using rule 33 (routines -> decroutine routines .)


state 25

    (35) decroutine -> ROUTINE dectype . ID L_PAREN params R_PAREN L_CURLY vars block R_CURLY

    ID              shift and go to state 33


state 26

    (41) dectype -> type .

    ID              reduce using rule 41 (dectype -> type .)


state 27

    (42) dectype -> empty .

    ID              reduce using rule 42 (dectype -> empty .)


state 28

    (5) decvars -> type r2 dim1array . decassign SEMICOLON r3 decvars
    (13) decassign -> . ASSIGN assignvalue
    (14) decassign -> . empty
    (103) empty -> .

    ASSIGN          shift and go to state 35
    SEMICOLON       reduce using rule 103 (empty -> .)

    decassign                      shift and go to state 34
    empty                          shift and go to state 36

state 29

    (9) dim1array -> L_BRKT . V_INT R_BRKT dim2array

    V_INT           shift and go to state 37


state 30

    (10) dim1array -> empty .

    ASSIGN          reduce using rule 10 (dim1array -> empty .)
    SEMICOLON       reduce using rule 10 (dim1array -> empty .)


state 31

    (1) program -> r1 STARTPROG vars r4 routines main ENDPROG .

    $end            reduce using rule 1 (program -> r1 STARTPROG vars r4 routines main ENDPROG .)


state 32

    (47) main -> MAIN L_CURLY . vars block R_CURLY
    (4) vars -> . VARS decvars ENDVARS

    VARS            shift and go to state 5

    vars                           shift and go to state 38

state 33

    (35) decroutine -> ROUTINE dectype ID . L_PAREN params R_PAREN L_CURLY vars block R_CURLY

    L_PAREN         shift and go to state 39


state 34

    (5) decvars -> type r2 dim1array decassign . SEMICOLON r3 decvars

    SEMICOLON       shift and go to state 40


state 35

    (13) decassign -> ASSIGN . assignvalue
    (15) assignvalue -> . constant
    (16) assignvalue -> . assignarray
    (17) assignvalue -> . empty
    (48) constant -> . V_INT
    (49) constant -> . V_DOUBLE
    (50) constant -> . V_CHAR
    (51) constant -> . V_BOOL
    (18) assignarray -> . L_BRKT assignarray2 R_BRKT
    (19) assignarray -> . empty
    (103) empty -> .

    V_INT           shift and go to state 45
    V_DOUBLE        shift and go to state 46
    V_CHAR          shift and go to state 47
    V_BOOL          shift and go to state 48
    L_BRKT          shift and go to state 49
    SEMICOLON       reduce using rule 103 (empty -> .)

    assignvalue                    shift and go to state 41
    constant                       shift and go to state 42
    assignarray                    shift and go to state 43
    empty                          shift and go to state 44

state 36

    (14) decassign -> empty .

    SEMICOLON       reduce using rule 14 (decassign -> empty .)


state 37

    (9) dim1array -> L_BRKT V_INT . R_BRKT dim2array

    R_BRKT          shift and go to state 50


state 38

    (47) main -> MAIN L_CURLY vars . block R_CURLY
    (62) block -> . loop
    (63) block -> . condition
    (64) block -> . assignvalue SEMICOLON
    (65) block -> . input SEMICOLON
    (66) block -> . output SEMICOLON
    (67) block -> . return SEMICOLON
    (68) block -> . empty
    (69) loop -> . LOOP L_PAREN expression R_PAREN
    (70) condition -> . IF L_PAREN expression R_PAREN L_CURLY block R_CURLY else
    (15) assignvalue -> . constant
    (16) assignvalue -> . assignarray
    (17) assignvalue -> . empty
    (73) input -> . INPUT L_PAREN expression R_PAREN
    (74) output -> . OUTPUT L_PAREN expression R_PAREN
    (75) return -> . RETURN expression
    (103) empty -> .
    (48) constant -> . V_INT
    (49) constant -> . V_DOUBLE
    (50) constant -> . V_CHAR
    (51) constant -> . V_BOOL
    (18) assignarray -> . L_BRKT assignarray2 R_BRKT
    (19) assignarray -> . empty

    LOOP            shift and go to state 59
    IF              shift and go to state 60
    INPUT           shift and go to state 61
    OUTPUT          shift and go to state 62
    RETURN          shift and go to state 63
    R_CURLY         reduce using rule 103 (empty -> .)
    SEMICOLON       reduce using rule 103 (empty -> .)
    V_INT           shift and go to state 45
    V_DOUBLE        shift and go to state 46
    V_CHAR          shift and go to state 47
    V_BOOL          shift and go to state 48
    L_BRKT          shift and go to state 49

    block                          shift and go to state 51
    loop                           shift and go to state 52
    condition                      shift and go to state 53
    assignvalue                    shift and go to state 54
    input                          shift and go to state 55
    output                         shift and go to state 56
    return                         shift and go to state 57
    empty                          shift and go to state 58
    constant                       shift and go to state 42
    assignarray                    shift and go to state 43

state 39

    (35) decroutine -> ROUTINE dectype ID L_PAREN . params R_PAREN L_CURLY vars block R_CURLY
    (43) params -> . type ID params2
    (44) params -> . empty
    (57) type -> . INT
    (58) type -> . DOUBLE
    (59) type -> . CHAR
    (60) type -> . BOOL
    (61) type -> . STRING
    (103) empty -> .

    INT             shift and go to state 10
    DOUBLE          shift and go to state 11
    CHAR            shift and go to state 12
    BOOL            shift and go to state 13
    STRING          shift and go to state 14
    R_PAREN         reduce using rule 103 (empty -> .)

    params                         shift and go to state 64
    type                           shift and go to state 65
    empty                          shift and go to state 66

state 40

    (5) decvars -> type r2 dim1array decassign SEMICOLON . r3 decvars
    (8) r3 -> .

    INT             reduce using rule 8 (r3 -> .)
    DOUBLE          reduce using rule 8 (r3 -> .)
    CHAR            reduce using rule 8 (r3 -> .)
    BOOL            reduce using rule 8 (r3 -> .)
    STRING          reduce using rule 8 (r3 -> .)
    ENDVARS         reduce using rule 8 (r3 -> .)

    r3                             shift and go to state 67

state 41

    (13) decassign -> ASSIGN assignvalue .

    SEMICOLON       reduce using rule 13 (decassign -> ASSIGN assignvalue .)


state 42

    (15) assignvalue -> constant .

    SEMICOLON       reduce using rule 15 (assignvalue -> constant .)


state 43

    (16) assignvalue -> assignarray .

    SEMICOLON       reduce using rule 16 (assignvalue -> assignarray .)


state 44

    (17) assignvalue -> empty .
    (19) assignarray -> empty .

  ! reduce/reduce conflict for SEMICOLON resolved using rule 17 (assignvalue -> empty .)
    SEMICOLON       reduce using rule 17 (assignvalue -> empty .)

  ! SEMICOLON       [ reduce using rule 19 (assignarray -> empty .) ]


state 45

    (48) constant -> V_INT .

    SEMICOLON       reduce using rule 48 (constant -> V_INT .)
    COMMA           reduce using rule 48 (constant -> V_INT .)
    R_BRKT          reduce using rule 48 (constant -> V_INT .)
    MULT            reduce using rule 48 (constant -> V_INT .)
    DIV             reduce using rule 48 (constant -> V_INT .)
    PLUS            reduce using rule 48 (constant -> V_INT .)
    MINUS           reduce using rule 48 (constant -> V_INT .)
    GREATER         reduce using rule 48 (constant -> V_INT .)
    LESS            reduce using rule 48 (constant -> V_INT .)
    EQUAL           reduce using rule 48 (constant -> V_INT .)
    GREATEREQUAL    reduce using rule 48 (constant -> V_INT .)
    LESSEQUAL       reduce using rule 48 (constant -> V_INT .)
    NOTEQUAL        reduce using rule 48 (constant -> V_INT .)
    AND             reduce using rule 48 (constant -> V_INT .)
    OR              reduce using rule 48 (constant -> V_INT .)
    R_PAREN         reduce using rule 48 (constant -> V_INT .)


state 46

    (49) constant -> V_DOUBLE .

    SEMICOLON       reduce using rule 49 (constant -> V_DOUBLE .)
    COMMA           reduce using rule 49 (constant -> V_DOUBLE .)
    R_BRKT          reduce using rule 49 (constant -> V_DOUBLE .)
    MULT            reduce using rule 49 (constant -> V_DOUBLE .)
    DIV             reduce using rule 49 (constant -> V_DOUBLE .)
    PLUS            reduce using rule 49 (constant -> V_DOUBLE .)
    MINUS           reduce using rule 49 (constant -> V_DOUBLE .)
    GREATER         reduce using rule 49 (constant -> V_DOUBLE .)
    LESS            reduce using rule 49 (constant -> V_DOUBLE .)
    EQUAL           reduce using rule 49 (constant -> V_DOUBLE .)
    GREATEREQUAL    reduce using rule 49 (constant -> V_DOUBLE .)
    LESSEQUAL       reduce using rule 49 (constant -> V_DOUBLE .)
    NOTEQUAL        reduce using rule 49 (constant -> V_DOUBLE .)
    AND             reduce using rule 49 (constant -> V_DOUBLE .)
    OR              reduce using rule 49 (constant -> V_DOUBLE .)
    R_PAREN         reduce using rule 49 (constant -> V_DOUBLE .)


state 47

    (50) constant -> V_CHAR .

    SEMICOLON       reduce using rule 50 (constant -> V_CHAR .)
    COMMA           reduce using rule 50 (constant -> V_CHAR .)
    R_BRKT          reduce using rule 50 (constant -> V_CHAR .)
    MULT            reduce using rule 50 (constant -> V_CHAR .)
    DIV             reduce using rule 50 (constant -> V_CHAR .)
    PLUS            reduce using rule 50 (constant -> V_CHAR .)
    MINUS           reduce using rule 50 (constant -> V_CHAR .)
    GREATER         reduce using rule 50 (constant -> V_CHAR .)
    LESS            reduce using rule 50 (constant -> V_CHAR .)
    EQUAL           reduce using rule 50 (constant -> V_CHAR .)
    GREATEREQUAL    reduce using rule 50 (constant -> V_CHAR .)
    LESSEQUAL       reduce using rule 50 (constant -> V_CHAR .)
    NOTEQUAL        reduce using rule 50 (constant -> V_CHAR .)
    AND             reduce using rule 50 (constant -> V_CHAR .)
    OR              reduce using rule 50 (constant -> V_CHAR .)
    R_PAREN         reduce using rule 50 (constant -> V_CHAR .)


state 48

    (51) constant -> V_BOOL .

    SEMICOLON       reduce using rule 51 (constant -> V_BOOL .)
    COMMA           reduce using rule 51 (constant -> V_BOOL .)
    R_BRKT          reduce using rule 51 (constant -> V_BOOL .)
    MULT            reduce using rule 51 (constant -> V_BOOL .)
    DIV             reduce using rule 51 (constant -> V_BOOL .)
    PLUS            reduce using rule 51 (constant -> V_BOOL .)
    MINUS           reduce using rule 51 (constant -> V_BOOL .)
    GREATER         reduce using rule 51 (constant -> V_BOOL .)
    LESS            reduce using rule 51 (constant -> V_BOOL .)
    EQUAL           reduce using rule 51 (constant -> V_BOOL .)
    GREATEREQUAL    reduce using rule 51 (constant -> V_BOOL .)
    LESSEQUAL       reduce using rule 51 (constant -> V_BOOL .)
    NOTEQUAL        reduce using rule 51 (constant -> V_BOOL .)
    AND             reduce using rule 51 (constant -> V_BOOL .)
    OR              reduce using rule 51 (constant -> V_BOOL .)
    R_PAREN         reduce using rule 51 (constant -> V_BOOL .)


state 49

    (18) assignarray -> L_BRKT . assignarray2 R_BRKT
    (20) assignarray2 -> . assignarray3
    (21) assignarray2 -> . assignarray5
    (22) assignarray3 -> . constant assignarray4
